--- a/HTML_sandbox/01_basic_layout.html
+++ b/HTML_sandbox/01_basic_layout.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html> <!--Doctype: Lets the browser know what type of document-->
+<!DOCTYPE html> <!--Doctype: Lets the browser the type of document-->
 <html> 
-    <head> <!--head is used for metatags: Keywords-->
+    <head> <!--head is used for metadata: e.g. Keywords-->
         <!--Shown in the tab-->
         <title> 
             My website 
