--- a/HTML_sandbox/03_meta_tags.html
+++ b/HTML_sandbox/03_meta_tags.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="ISO-8859-1">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name = "description" content = "This is my website description">
+    
+    <!--Ignored by most search engines, may be exploited to influence SE search results-->
     <meta name = "keywords" content = "web design, web development">
     
     <!--Prevents search engines to rank your site-->
