CSS_07_float_align

--- a/CSS_sandbox/06_box_model.html
+++ b/CSS_sandbox/06_box_model.html
@@ -13,7 +13,7 @@
     *{
         margin: 0;
         border: 0;
-        box-sizing: border-box;
+        box-sizing: border-box; /*BY declaring this, do not add the padding to the width of the element*/
     }
 
     .box{
