09_nav_sidebar_styling_menus

--- a/CSS_sandbox/07_float_align.html
+++ b/CSS_sandbox/07_float_align.html
@@ -35,7 +35,7 @@
             margin: 30px auto;   /* 30 px tb and auto lr */
         }
 
-        .clr{
+        .clr{ /*Utility class to clear the floats - Basically continue with the flow of elements AFTER the floats*/
             clear: both;
         }
 
