Hotel website navbar

--- a/CSS_sandbox/12_A_nice_form.html
+++ b/CSS_sandbox/12_A_nice_form.html
@@ -68,14 +68,17 @@
         */
             text-align: left;
             display: block;
-            font-size: 16px;
+            font-size: 18px;
             border-radius: 5px;
+            color: #666;
         }
 
         .form-wrap .form-group input {
             width: 100%;
             font-size: 20px;
             margin-top: 5px;
+            border: #ddd 1px solid;
+            border-radius: 5px;
         }
 
         .form-wrap button {
