Hotel Project About

--- a/Hotel_Project/index.html
+++ b/Hotel_Project/index.html
@@ -45,18 +45,26 @@
     </section>
 
     <section id = "features">
-        <div class="box">
+        <div class="box bg-light">
+            <i class="fas fa-hotel fa-3x"></i>
             <h3>Great Location</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, cumque.</p>
         </div>
-        <div class="box">
+        <div class="box bg-primary">
+            <i class="fas fa-utensils fa-3x"></i>
             <h3>Breakfast Included</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, cumque.</p>
         </div>
-        <div class="box">
+        <div class="box bg-light">
+            <i class="fas fa-dumbbell fa-3x"></i>
             <h3>Fitness Room</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, cumque.</p>
         </div>
     </section>
+
+    <div class="clr"></div>
+    <footer id="main-footer">
+        <p>Hotel BT &copy; 2020 All Rights Reserved</p>
+    </footer>
 </body>
 </html>
