--- a/Hotel_Project/about.html
+++ b/Hotel_Project/about.html
@@ -3,9 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hotel BT | About</title>
+    <meta name = "description" content = "Welcome to the most extraordinary hotel in Taiwan">
+    <meta name = "keywords" content = "hotel, Taiwan">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <header>
+        <nav id="navbar">
+            <div class="container">
+                <h1 class = "logo"><a href="index.html">HBT</a></h1>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a class = "current" href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    
+    <section id = "about-info" class = "bg-light py-3">
+        <div class="container">
+            <div class="info-left">
+                <h1 class = "l-heading"><span class = "text-primary">About</span> Hotel BT</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur vitae quae fuga impedit. Ex delectus autem excepturi possimus ea minus voluptatum, facilis placeat nulla impedit enim voluptate accusantium ut necessitatibus.</p>
+            
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis facere incidunt voluptatibus harum. Maiores eius, ullam voluptatum saepe odit sit.</p>
+            </div>
+            <div class="info-right">
+                <img src="/image_resources/photo-2.jpg" alt="Our Hotel">
+            </div>
+        </div>  
+    </section>
 
+    <section id="testimonials" class = "py-3"> 
+        <div class="container">
+            <h2 class="l-heading">What Our Guests Say</h2>
+            <div class="testimonial bg-primary">
+                <img src="/image_resources/person-1.jpg" alt="Jen">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit atque veritatis quam ducimus sint quos, ut, dolorem iusto aperiam unde tempora possimus non ipsa dolore placeat dignissimos eaque rem illum, laborum corporis soluta? Numquam soluta cum, laboriosam provident molestiae optio.</p>
+            </div>
+
+            <div class="testimonial bg-primary">
+                <img src="/image_resources/person-2.jpg" alt="Caroline">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit atque veritatis quam ducimus sint quos, ut, dolorem iusto aperiam unde tempora possimus non ipsa dolore placeat dignissimos eaque rem illum, laborum corporis soluta? Numquam soluta cum, laboriosam provident molestiae optio.</p>
+            </div>
+
+
+        </div>
+
+    </section>
+
+    <footer id="main-footer">
+        <p>Hotel BT &copy; 2020 All Rights Reserved</p>
+    </footer>
 </body>
 </html>
