--- a/Hotel_Project/contact.html
+++ b/Hotel_Project/contact.html
@@ -3,9 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hotel BT | Contact</title>
+    <meta name = "description" content = "Welcome to the most extraordinary hotel in Taiwan">
+    <meta name = "keywords" content = "hotel, Taiwan">
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="/fontawesome-free-5.15.1-web/css/all.css" rel="stylesheet"> 
 </head>
 <body>
-    
-</body>
-</html>
+    <header>
+        <nav id="navbar">
+            <div class="container">
+                <h1 class = "logo"><a href="index.html">HBT</a></h1>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a class = "current" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <section id="contact-form" class = "py-3">
+        <div class="container">
+            <h1 class="l-heading"><span class = "text-primary"> Contact</span> Us</h1>
+            <p>Please fill out the form to contact us</p>
+            
+            <form action="process.php">
+                <div class="form-group">
+                    <label for="name"> Name</label>
+                    <input type="text" name = "name" id = "name">
+                </div>
+                <div class="form-group">
+                    <label for="email"> Email</label>
+                    <input type="email" name = "email" id = "email">
+                </div>
+                <div class="form-group">
+                    <label for="message"> Message</label>
+                    <textarea name="message" id="message"></textarea>
+                </div>
+
+                <button type = "submit" class = "btn">Submit </button>
+            </form>
+        </div>
+  </section>
+
+    <section id = "contact-info" class = "bg-dark">
+        <div class="container">
+            <div class="box">
+                <i class="fas fa-hotel fa-3x"></i>
+                <h3> Location</h3>
+                <p>50 Main st, Boston MA</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-phone fa-3x"></i>
+                <h3>Phone Number</h3>
+                <p> (617) 555 - 5555</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-envelope fa-3x"></i>
+                <h3>Email Address</h3>
+                <p>frontdesk@hotelbt.com</p>
+            </div>
+        </div>
+    </section>
+
+    <footer id="main-footer">
+        <p>Hotel BT &copy; 2020 All Rights Reserved</p>
+    </footer>
