--- a/Responsive_Design/02_em_rem_units.html
+++ b/Responsive_Design/02_em_rem_units.html
@@ -4,28 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Em & Rem Units</title>
+    <!-- em unit: Multiplier relative to the font size of the parent or container element-->
+    <!-- rem unit: Multiplier relative to the font size of the root html element-->
     <style>
-        #box-1{
+        /* em units */
+        /* #box-1{
             font-size: 20px;
         }
+
         #box-1 p{
             font-size: 1.5em;
-            padding: 1em;
+            padding: 1em; /*Expects a padding of 20px, however the parent element is p itself since we modified the font size
+                            property. Padding is now (20*1.5)*1 = 30px
         }
+
+        /*em units affect nested elements very harshly!
+        #box-1 ul{
+            font-size: 1.2em;
+        } */
+
+        /* rem units */
+        /*Chagning the root hmtl element properties*/
+        html{
+            font-size: 62.5%; /*A nice font-size to use as root. rem units are all multiplied by 10.*/
+        }
+
+        #box-2 h3{
+            font-size: 2rem;
+        }
+
+        #box-2 p{
+            font-size: 1.6rem;
+            line-height: 1.7rem;
+        }
+
 
     </style>
 </head>
 <body>
-    <div id="box-1">
+    <!-- <div id="box-1">
         <h3>Box One</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure nostrum voluptatum vitae, fugiat debitis expedita repellendus tempore a at culpa.</p>
-    </div>
+        <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+                <ul>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                        <ul>
+                            <li>1</li>
+                            <li>2</li>
+                            <li>3</li>
+                        </ul>
+                </ul>
+            <li>4</li>
+        </ul>
+    </div> -->
+
     <div id="box-2">
         <h3>Box Two</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure nostrum voluptatum vitae, fugiat debitis expedita repellendus tempore a at culpa.</p>
-    </div>
-    <div id="box-3">
-        <h3>Box Three</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure nostrum voluptatum vitae, fugiat debitis expedita repellendus tempore a at culpa.</p>
     </div>
 </body>
