Responsivve Hotel Website

--- a/Hotel_Project/about.html
+++ b/Hotel_Project/about.html
@@ -7,6 +7,7 @@
     <meta name = "description" content = "Welcome to the most extraordinary hotel in Taiwan">
     <meta name = "keywords" content = "hotel, Taiwan">
     <link rel="stylesheet" href="/css/style.css">
+    <link href="/Responsive/mobile.css" media = "screen and (max-width: 768px)" rel="stylesheet"> 
 </head>
 <body>
     <header>
@@ -48,8 +49,6 @@
                 <img src="/image_resources/person-2.jpg" alt="Caroline">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit atque veritatis quam ducimus sint quos, ut, dolorem iusto aperiam unde tempora possimus non ipsa dolore placeat dignissimos eaque rem illum, laborum corporis soluta? Numquam soluta cum, laboriosam provident molestiae optio.</p>
             </div>
-
-
         </div>
     </section>
     
