--- a/Hotel_Project/index.html
+++ b/Hotel_Project/index.html
@@ -8,6 +8,7 @@
     <meta name = "keywords" content = "hotel, Taiwan">
     <link rel="stylesheet" href="/css/style.css">
     <link href="/fontawesome-free-5.15.1-web/css/all.css" rel="stylesheet"> 
+    <link href="/Responsive/mobile.css" media = "screen and (max-width: 768px)" rel="stylesheet"> 
 </head>
 <body>
     <header>
