--- a/Hotel_Project/contact.html
+++ b/Hotel_Project/contact.html
@@ -7,6 +7,7 @@
     <meta name = "description" content = "Welcome to the most extraordinary hotel in Taiwan">
     <meta name = "keywords" content = "hotel, Taiwan">
     <link rel="stylesheet" href="/css/style.css">
+    <link href="/Responsive/mobile.css" media = "screen and (max-width: 768px)" rel="stylesheet"> 
     <link href="/fontawesome-free-5.15.1-web/css/all.css" rel="stylesheet"> 
 </head>
 <body>
