--- a/EdgeLedger/index.html
+++ b/EdgeLedger/index.html
@@ -6,15 +6,14 @@
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <title>Welcom to EdgeLedger</title>
+    <title>Welcome to EdgeLedger</title>
 </head>
 <body id = "home">
-    <header id="hero">
+    <header class="hero">
         <div class="navbar" id = "navbar">
             <h1 class = "logo">
                 <span class ="text-primary"><i class="fas fa-book-open"></i>Edge</span>Ledger
             </h1>
-        
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -29,7 +28,7 @@
         <div class="content">
             <h1>The Sky Is The Limit</h1>
             <p> We provide world class financial assistance</p>
-            <a href="#about" class ="btn"><i class = "fas fa-chevron-right"></i>Read More</a>
+            <a href="#about" class ="btn"><i class = "fas fa-chevron-right"></i> Read More</a>
         </div>
     </header>
 </body>
