--- a/EdgeLedger/index.html
+++ b/EdgeLedger/index.html
@@ -31,5 +31,59 @@
             <a href="#about" class ="btn"><i class = "fas fa-chevron-right"></i> Read More</a>
         </div>
     </header>
+    <!--About: Icons-->
+        <main>
+            <section id = "about" class = "icons bg-light">
+                <div class="flex-items">
+                    <div>
+                        <i class = "fas fa-university fa-2x"></i>
+                        <div>
+                            <h3>Investment Banking</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, numquam.</p>
+                        </div>
+                    </div>
+
+                    <div>
+                        <i class = "fas fa-book-reader fa-2x"></i>
+                        <div>
+                            <h3>Portfolio Manager</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, numquam.</p>
+                        </div>
+                    </div>
+
+                    <div>
+                        <i class = "fas fa-pencil-alt fa-2x"></i>
+                        <div>
+                            <h3>Tax & Custodial</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, numquam.</p>
+                        </div>
+                    </div>           
+                </div>
+            </section>
+
+            <!--About: Solutions-->
+            <section class="solutions flex-columns">
+                <div class="row">
+                    <div class="column">
+                        <div class="column-1">
+                            <img src="/image_resources/home/people.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="column-2 bg-primary">
+                            <h4>What you are looking for</h4>
+                            <h2>We provide bespoke solutions</h2>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus voluptatem iusto, saepe officia unde amet accusantium quisquam veritatis similique non odit sed magnam voluptatibus consectetur fuga consequuntur dolores rerum itaque.</p>
+                            <a href="#" class="btn btn-outline">
+                                <i class="fas fa-chevron"></i>
+                                Read More
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+        </main>
+    </header>
 </body>
 </html>
