EdgeLedger project adds blog section

--- a/EdgeLedger/index.html
+++ b/EdgeLedger/index.html
@@ -31,6 +31,7 @@
             <a href="#about" class ="btn"><i class = "fas fa-chevron-right"></i> Read More</a>
         </div>
     </header>
+
     <!--About: Icons-->
         <main>
             <section id = "about" class = "icons bg-light">
@@ -61,7 +62,7 @@
                 </div>
             </section>
 
-            <!--About: Solutions-->
+            <!--About Solutions 1-->
             <section class="solutions flex-columns">
                 <div class="row">
                     <div class="column">
@@ -79,10 +80,62 @@
                                 Read More
                             </a>
                         </div>
-
                     </div>
                 </div>
             </section>
+
+            <!--Cases-->
+            <section id="cases" class="cases flex-grid section-padding">
+                <header class="section-header">
+                    <h4>This is what we do</h4>
+                    <h2>Bussiness Cases</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, repellat.</p>
+                </header>
+                
+                <div class="row">
+                    <div class="column">
+                        <img src="/image_resources/cases/cases1.jpg" alt="">
+                        <img src="/image_resources/cases/cases2.jpg" alt="">
+                    </div>
+
+                    <div class="column">
+                        <img src="/image_resources/cases/cases3.jpg" alt="">
+                        <img src="/image_resources/cases/cases4.jpg" alt="">
+                    </div>
+
+                    <div class="column">
+                        <img src="/image_resources/cases/cases5.jpg" alt="">
+                        <img src="/image_resources/cases/cases6.jpg" alt="">
+                    </div>
+
+                    <div class="column">
+                        <img src="/image_resources/cases/cases7.jpg" alt="">
+                        <img src="/image_resources/cases/cases8.jpg" alt="">
+                    </div>
+                </div>
+            </section>
+
+         <!--Blog-->
+         <section id = "blog" class="blog flex-columns flex-reverse">
+            <div class="row">
+                <div class="column">
+                    <div class="column-1">
+                        <img src="/image_resources/home/blog.jpg" alt="">
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="column-2 bg-secondary">
+                        <h4>April 16 2020</h4>
+                        <h2>Blog Post One</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus voluptatem iusto, saepe officia unde amet accusantium quisquam veritatis similique non odit sed magnam voluptatibus consectetur fuga consequuntur dolores rerum itaque.</p>
+                        <a href="#" class="btn btn-outline">
+                            <i class="fas fa-chevron"></i>
+                            Read Our Blog
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
         </main>
     </header>
 </body>
