Completes EdgeLedger HomePage and fixes some bugs in the Hotel Project Website

--- a/Hotel_Project/about.html
+++ b/Hotel_Project/about.html
@@ -6,8 +6,8 @@
     <title>Hotel BT | About</title>
     <meta name = "description" content = "Welcome to the most extraordinary hotel in Taiwan">
     <meta name = "keywords" content = "hotel, Taiwan">
-    <link rel="stylesheet" href="/css/style.css">
-    <link href="/Responsive/mobile.css" media = "screen and (max-width: 768px)" rel="stylesheet"> 
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="./Responsive/mobile.css" media = "screen and (max-width: 768px)" rel="stylesheet"> 
 </head>
 <body>
     <header>
@@ -32,7 +32,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis facere incidunt voluptatibus harum. Maiores eius, ullam voluptatum saepe odit sit.</p>
             </div>
             <div class="info-right">
-                <img src="/image_resources/photo-2.jpg" alt="Our Hotel">
+                <img src="./image_resources/photo-2.jpg" alt="Our Hotel">
             </div>
         </div>  
     </section>
@@ -41,12 +41,12 @@
         <div class="container">
             <h2 class="l-heading">What Our Guests Say</h2>
             <div class="testimonial bg-primary">
-                <img src="/image_resources/person-1.jpg" alt="Jen">
+                <img src="./image_resources/person-1.jpg" alt="Jen">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit atque veritatis quam ducimus sint quos, ut, dolorem iusto aperiam unde tempora possimus non ipsa dolore placeat dignissimos eaque rem illum, laborum corporis soluta? Numquam soluta cum, laboriosam provident molestiae optio.</p>
             </div>
 
             <div class="testimonial bg-primary">
-                <img src="/image_resources/person-2.jpg" alt="Caroline">
+                <img src="./image_resources/person-2.jpg" alt="Caroline">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit atque veritatis quam ducimus sint quos, ut, dolorem iusto aperiam unde tempora possimus non ipsa dolore placeat dignissimos eaque rem illum, laborum corporis soluta? Numquam soluta cum, laboriosam provident molestiae optio.</p>
             </div>
         </div>
