--- a/011_NewsGrid_Website/index.html
+++ b/011_NewsGrid_Website/index.html
@@ -43,7 +43,97 @@
             </div>
         </div>
     </header>
+    <!-- Home articles -->
+    <section id="home-articles" class = "py-2"> 
+        <div class="container">
+            <h2>Editor's Pick</h2>
+            <div class="articles-container">
+                <article class="card"> <!--Often seen in bootstrap -->
+                    <img src="./img/articles/ent1.jpg" alt="">
+                    <div>
+                        <div class="category category-ent">Entertainment</div>
+                        <h3><a href="./article.html">Lorem ipsum dolor sit amet.</a></h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi sed pariatur iure eius libero voluptates. Amet, iure delectus. Ut, modi.</p>
+                    </div>
+                </article>
+                <article class="card bg-dark"> <!--Often seen in bootstrap -->
+                    <div class="category category-sports">Sports</div>
+                    <h3><a href="./article.html">Lorem ipsum dolor sit amet.</a></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi sed pariatur iure eius libero voluptates. Amet, iure delectus. Ut, modi.</p>
+                </article>
 
-    
+                <article class="card "> <!--Often seen in bootstrap -->
+                    <img src="./img/articles/tech1.jpg" alt="">
+                    <div class="category category-tech">Technology</div>
+                    <h3><a href="./article.html">Lorem ipsum dolor sit amet.</a></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi sed pariatur iure eius libero voluptates. Amet, iure delectus. Ut, modi.</p>
+                </article>
+
+                <article class="card"> <!--Often seen in bootstrap -->
+
+                    <div class="category category-sports">Sports</div>
+                    <h3><a href="./article.html">Lorem ipsum dolor sit amet.</a></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi sed pariatur iure eius libero voluptates. Amet, iure delectus. Ut, modi.</p>
+                    <img src="./img/articles/sports1.jpg" alt="">
+                </article>
+
+                <article class="card"> <!--Often seen in bootstrap -->
+                    <img src="./img/articles/tech2.jpg" alt="">
+                    <div class="category category-tech">Technology</div>
+                    <h3><a href="./article.html">Lorem ipsum dolor sit amet.</a></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi sed pariatur iure eius libero voluptates. Amet, iure delectus. Ut, modi.</p>
+                </article>
+
+                <article class="card bg-primary"> <!--Often seen in bootstrap -->
+                    <div class="category category-sports">Sports</div>
+                    <h3><a href="./article.html">Lorem ipsum dolor sit amet.</a></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi sed pariatur iure eius libero voluptates. Amet, iure delectus. Ut, modi.</p>
+                </article>
+
+                <article class="card"> <!--Often seen in bootstrap -->
+                    <div>
+                        <div class="category category-ent">Entertainment</div>
+                        <h3><a href="./article.html">Lorem ipsum dolor sit amet.</a></h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi sed pariatur iure eius libero voluptates. Amet, iure delectus. Ut, modi.</p>
+                    </div>
+                    <img src="./img/articles/ent2.jpg" alt="">
+                </article>
+            </div>
+        </div>
+    </section>
+    <!-- Footer -->
+    <footer id = "main-footer" class = "py-2">
+        <div class="container footer-container">
+            <div>
+                <img src="./img/logo_light.png" alt="NewsGrid Light">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim distinctio porro nam in eum aliquid adipisci minima quas aperiam laudantium?</p>
+            </div>
+            <div>
+                <h3>Email Newsletter</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <form>
+                    <input type="email" placeholder = "Enter your email">
+                    <input type="submit" value = "Suscribe" class = "btn btn-primary">
+                </form>
+            </div>
+            <div class = "lists">
+                <h3>Site Links</h3>
+                <ul>
+                    <li><a href="#">Help & Support</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div>
+                <h2>Join our Club</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, numquam.</p>
+                <a href="" class = "btn btn-secondary">Join Now!</a>
+            </div>
+            <div>
+                <p>Copyright &copy; All Rights Reserved</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
